--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "next": "13.4.4",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-google-button": "^0.7.2",
+    "react-icons": "^4.9.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.9",
