--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
-  "name": "telemeasure",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@chakra-ui/next-js": "^2.1.4",
-    "@chakra-ui/react": "^2.7.0",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@types/node": "20.2.5",
-    "@types/react": "18.2.9",
-    "@types/react-dom": "18.2.4",
-    "framer-motion": "^10.12.16",
-    "next": "13.4.4",
-    "next-auth": "^4.22.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-google-button": "^0.7.2",
-    "react-icons": "^4.9.0"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.59.9",
-    "eslint": "^8.42.0",
-    "eslint-config-next": "^13.4.4",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-config-standard-with-typescript": "^35.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.7.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.32.2",
-    "typescript": "^5.1.3"
-  }
+	"name": "mango",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@chakra-ui/next-js": "^2.1.4",
+		"@chakra-ui/react": "^2.7.0",
+		"@emotion/react": "^11.11.1",
+		"@emotion/styled": "^11.11.0",
+		"@types/node": "20.2.5",
+		"@types/react": "18.2.9",
+		"@types/react-dom": "18.2.4",
+		"framer-motion": "^10.12.16",
+		"next": "13.4.4",
+		"next-auth": "^4.22.1",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-google-button": "^0.7.2",
+		"react-icons": "^4.9.0"
+	},
+	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^5.59.9",
+		"eslint": "^8.42.0",
+		"eslint-config-next": "^13.4.4",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-config-standard-with-typescript": "^35.0.0",
+		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-n": "^15.7.0",
+		"eslint-plugin-promise": "^6.1.1",
+		"eslint-plugin-react": "^7.32.2",
+		"typescript": "^5.1.3"
+	}
 }
